Primera versión limpia3

--- a/illustrator.html
+++ b/illustrator.html
@@ -55,9 +55,9 @@
     <div class="container">
         <div class="row justify-content-start align-items-center">
           <div class="col-12 col-md-6 mb-4 aged " style="padding: 2rem;">
-            <h1>Aging A Photo</h1>
+            <h1>Hand Drawing Posters</h1>
             <div class="aged ratio ratio-4x3">
-              <img src="images/ILLUSTRATIONS/JPEG/DerbyR10.jpg" alt="Before" class="aged-before img-fluid object-fit-cover imagen-saltito popup-img">
+              <img src="images/ILLUSTRATIONS/JPEG/movieposter.jpg" alt="Before" class="aged-before img-fluid object-fit-cover imagen-saltito popup-img">
               <div class="reveal-wrapper">
                 <img src="images/ILLUSTRATIONS/JPEG/Swolen1psd.jpg" alt="After" class="img-fluid aged-after object-fit-cover imagen-saltito popup-img">
                 <div class="reveal-wrapper2">
@@ -66,7 +66,7 @@
               </div>
            
             </div>
-            <p>For this project, the goal was to create an aged photo from a photo collection.</p>
+            <p>For this project, I created an illustration using colored pencils and adapted it as an advertisement. This approach could be used in campaigns aimed at children, families, or educational environments, where a hand-drawn style helps create a sense of warmth, creativity, and authenticity.</p>
           </div>
       
           <div class="col-12 col-md-6 mb-4 aged " style="padding: 2rem;">
@@ -74,7 +74,7 @@
             <div class="aged ratio ratio-4x3 " >
               <img src="images/ILLUSTRATIONS/JPEG/SolaraAir-1.jpg" alt="Before" class="img-fluid aged-before object-fit-cover imagen-saltito popup-img">
               <div class="reveal-wrapper">
-                <img src="images/ILLUSTRATIONS/JPEG/movieposter.jpg" alt="After" class="img-fluid object-fit-cover aged-after imagen-saltito popup-img">
+                <img src="images/ILLUSTRATIONS/JPEG/DerbyR10.jpg" alt="After" class="img-fluid object-fit-cover aged-after imagen-saltito popup-img">
                 <div class="reveal-wrapper2">
                   <img src="images/ILLUSTRATIONS/JPEG/Comic.jpg" alt="After" class="img-fluid object-fit-cover aged-after imagen-saltito popup-img">
                 </div>
