--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <meta name="google-site-verification" content="RTpMOP6rSgO3T47Cy-ySAzgArwTyP1rlOGrGDDT1LrA" />
 
         <meta name="description" content="Portfolio of Gretel Alvarez Tang, a professional graphic designer specializing in branding, print, and web design projects." />
-        <meta name="keywords" content="graphic designer, branding, print design, web design, portfolio, Louisville Kentucky, logo design, photoshop" />
+        <meta name="keywords" content="graphic designer, branding, print design, web design, portfolio, Louisville Kentucky, logo design, photoshop, grey, figma, html, java" />
         <meta name="author" content="Gretel Alvarez Tang" />
       
         <!-- Open Graph para compartir en redes sociales -->
         <meta property="og:title" content="Gretel Alvarez Tang - Graphic Designer Portfolio" />
         <meta property="og:description" content="Portfolio of Gretel Alvarez Tang, a professional graphic designer specializing in branding, print, and web design projects." />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://galvareztang0001.github.io/tu-repositorio/" />
-        <meta property="og:image" content="https://galvareztang0001.github.io/tu-repositorio/tu-imagen.jpg" />
+        <meta property="og:url" content="https://gatang17.github.io/portfolio" />
+        <meta property="og:image" content="https://gatang17.github.io/portfolio/images/logo2.png" />
       
         <!-- CSS y otros recursos -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -75,7 +75,7 @@
                         <section class="sec_menu2">
                             <a class="nav-link" href="contact.html"><p class="p_v">INSTAGRAM</p></a>
                             <a class="nav-link" href="contact.html"><p class="p_v">FACEBOOK</p></a>
-                            <a class="nav-link" href="contact.html"><p class="p_v">BEHANCE</p></a>
+                            <a class="nav-link" href="https://www.behance.net/gretelalvarez1" target="_blank" rel="noopener noreferrer"><p class="p_v">BEHANCE</p></a>
                         </section>
                     </div>
                 </div>   
