Primera versión limpia4

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                             <div class="offcanvas-body">
                                                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                                     <li class="nav-item"><a class="nav-link text-decoration-underline" href="index.html"><p class="p_h_m">home</p></a></li>
-                                                    <li class="nav-item"><a class="nav-link text-decoration-underline" href="project.html"><p class="p_h_m">project</p></a></li>
+                                                    <li class="nav-item"><a class="nav-link text-decoration-underline" href="experience.html"><p class="p_h_m">expertise</p></a></li>
                                                     <li class="nav-item"><a class="nav-link text-decoration-underline" href="aboutme.html"><p class="p_h_m">about_me</p></a></li>
                                                     <li class="nav-item"><a class="nav-link text-decoration-underline" href="contact.html"><p class="p_h_m">contact</p></a></li>
                                                     <li class="nav-item"><a class="nav-link text-decoration-underline" href="project.html"><p class="p_h_m">gallery</p></a></li>
@@ -73,8 +73,8 @@
                         </section>
                         <section class="space"></section>
                         <section class="sec_menu2">
-                            <a class="nav-link" href="contact.html"><p class="p_v">INSTAGRAM</p></a>
-                            <a class="nav-link" href="contact.html"><p class="p_v">FACEBOOK</p></a>
+                            <a class="nav-link" href="https://www.instagram.com/grey_dpa"><p class="p_v">INSTAGRAM</p></a>
+                            <a class="nav-link" href="https://galvareztang0001.myportfolio.com"><p class="p_v">ADOBE_PORTFOLIO<P></P></p></a>
                             <a class="nav-link" href="https://www.behance.net/gretelalvarez1" target="_blank" rel="noopener noreferrer"><p class="p_v">BEHANCE</p></a>
                         </section>
                     </div>
