--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
           
             <div class="col-12 col-md-6 justify-content-center align-items-center">
 
-                <p style="text-align: center;">email: gretel_alvareztang@gmail.com</p>
+                <p style="text-align: center;">email: gretelalvareztang@gmail.com</p>
                 <p style="text-align: center;">phone: (502)-345-8298</p>
                    </div>
 
