Agregué el script de Cloudflare para medir visita google

--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
         <!-- CSS y otros recursos -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/8fb3a30aab.js" crossorigin="anonymous"></script>
-        <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "eba3c952151d48d3b0162588e219ae2c"}'></script><!-- End Cloudflare Web Analytics -->
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X2R58E5647"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X2R58E5647');
+</script>
+        
         <link rel="stylesheet" href="css/styles.css" />
       </head>
       
