--- a/project.html
+++ b/project.html
@@ -10,6 +10,16 @@
     <script src="https://kit.fontawesome.com/8fb3a30aab.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X2R58E5647"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X2R58E5647');
+</script>
+
 </head>
     <body>
 
