Agregué el corre2

--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
                 <div class="popup-content">
                   <span id="close-form" class="popup-close">&times;</span>
                   <h2>Envíame un mensaje</h2>
-                  <form action="https://formsubmit.co/gretelalvareztang@gmail.com" method="POST">
+                  <form action="493670cafa15146d92f24c8a3f8090bd" method="POST">
                     <label for="name">Nombre:</label>
                     <input type="text" id="name" name="name" required>
               
