--- a/inDesign.html
+++ b/inDesign.html
@@ -67,7 +67,7 @@
  
               <h1>Annual Report</h1>
               <div style="width: 100%; height: 100%;">
-                <embed src="ANR.pdf" style="width: auto; height: 500px;">
+                <embed src="ANR.pdf" style="width: 1000px; height: 450px;">
 
               </div>
             
