--- a/contact.html
+++ b/contact.html
@@ -157,6 +157,7 @@
                       <textarea id="message" name="message" required></textarea>
                     </div>
                   
+                    <input type="hidden" name="redirect" value="https://gatang17.github.io/portfolio/">
                     <!-- Aquí el botón con su clase para alinear -->
                     <button type="submit" class="btn_email">Send</button>
                   </form>
