Agregué proyectos en ad desig2

--- a/inDesign.html
+++ b/inDesign.html
@@ -132,7 +132,7 @@
     <!-- Fila 1 -->
 
     <div class="row align-items-top justify-content-center">
-      <div class="col my_col " >
+      <div class="col  " >
       <div class="row align-items-top justify-content-center">
 
         <div class="col-12 col-md-3 " >
@@ -176,7 +176,7 @@
       </div>
 </div>
 
-      <div class="col-12 col-md-3  " >
+      <div class="col-12 col-md-4  " >
         <div class="cont_descript">
           <p class="p_hover" style="font-size: small;">POP Display</p>
         <img src="images/AddDesign/vanishingPoint.png" class="tb_img img-fluid popup-img">
